Changes made from the "0.5" release to the "0.6" release:
-----------------------------------------------------------

* Bertrand Coconnier:

- Fixed a bug which caused a character that was not mapped to any font to be
  rendered wrongly the second time it is displayed when GLC_KERNING_QSO is
  enabled (bug reported by Brandon Casey).
- Added a test in the tests directory that checks if empty strings are
  correctly handled by the functions of QuesoGLC (no crash, no unexpected
  errors, no memory leaks).
- Modified the texture routines so that QuesoGLC tries several sizes of texture
  before giving up when rendering in GLC_TEXTURE mode with GLC_GL_OBJECTS
  disabled.
- Fixed global commands so that they can not execute GL commands since we can
  not make sure that the relevant GL context is bound to the current thread
  when a global GLC command is executed.
- Changed __glcSaveGLState() and __glcRestoreGLState() so that only a minimal
  part of the GL state is saved before the rendering commands are issued.
- Removed redundancy in the calls to glBindTexture() when the GLC_TEXTURE
  rendering mode is used.
- Removed the visibility test based on bounding boxes since it slowed down
  everything and the user can perform this test himself by using measurement
  commands.
- Modified immediate texture rendering to take advantage of pixel buffer
  objects (PBO) whenever the gfx card supports them.
- Optimized the rendering code so that the conversion from 26.6 fixed point
  coordinates to GLfloat is partially done by the GPU by using glScalef().
- Cleaned up some internal transactions between private functions in order to
  prevent back and forth translation between a font ID and its corresponding
  structure __GLCfont.
- Code cleanup :
  * Fixed the signed/unsigned comparisons
  * Removed unused function parameters
  * Renamed the structure __GLC* instead of __glc* for more consistency with
    Mesa.
  * Added some comments