@@ -3,6 +3,8 @@ Changes made from the "0.5" release to the "0.6" release:
 
 * Bertrand Coconnier:
 
+- Modified __glcFaceDescGetFontFormat() to use FT_Get_X11_Font_Format(),
+  whenever available, to detect the font format.
 - Fixed a bug which caused a character that was not mapped to any font to be
   rendered wrongly the second time it is displayed when GLC_KERNING_QSO is
   enabled (bug reported by Brandon Casey).
